--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     opacity: 0;
     transform: translateY(-20px);
     transition: opacity 0.5s ease, transform 0.5s ease;
+    position: relative;
+    display: none;
   }
   .gsc-search-button:hover {
     background-color: #0056b3 !important;
@@ -81,6 +83,18 @@
   .gsc-search-button.show {
     opacity: 1;
     transform: translateY(0);
+  }
+  .gsc-search-button .gsc-search-button-icon {
+    background-color: #007bff !important;
+    color: #fff !important;
+    border: none !important;
+    border-radius: 25px !important;
+    padding: 10px 25px !important;
+    font-size: 16px !important;
+    cursor: pointer !important;
+    transition: all 0.3s ease !important;
+    box-shadow: 0 4px 6px rgba(0, 123, 255, 0.1) !important;
+    display: none;
   }
   .search-overlay {
     position: fixed;
@@ -93,6 +107,9 @@
     justify-content: center;
     align-items: center;
     z-index: 9999;
+  }
+  .gsc-orderby-container {
+    opacity: 0 ;
   }
   .search-box {
     background-color: #fff;
@@ -112,7 +129,9 @@
     font-size: 18px;
     cursor: pointer;
   }
-
+  .gcsc-find-more-on-google{
+    opacity: 0;
+  }
   /* Adjust search results layout */
   .gsc-webResult.gsc-result {
     width: calc(33% - 20px); /* Adjusted width with gap */
@@ -183,6 +202,24 @@
     transform: translateY(-10px);
     transition: opacity 0.3s ease, transform 0.3s ease;
   }
+
+  /* Position gsc-cursor at bottom right and make it bigger */
+  .gsc-cursor {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    padding: 20px; /* Increased padding */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    font-size: 20px; /* Increased font size */
+  }
+
+  /* Make div#___gcse_1 transparent */
+  #___gcse_1 {
+    background: transparent !important;
+  }
 </style>
 </head>
 <body>
@@ -194,7 +231,9 @@
     <div class="search-box">
       <button class="close-button" onclick="closeSearchOverlay()">X</button>
       <input type="text" id="searchInputOverlay" class="gsc-input-box" placeholder="Enter text..." aria-label="Input">
-      <button class="gsc-search-button" onclick="performSearchOverlay()">Submit</button>
+      <button class="gsc-search-button" onclick="performSearchOverlay()">
+        <div class="gsc-search-button-icon"></div>
+      </button>
     </div>
   </div>
 </div>
@@ -209,36 +248,30 @@
 <script>
   function performSearchOverlay() {
     var query = document.getElementById("searchInputOverlay").value;
-    google.search.cse.element.getElement('searchresults-only').execute(query);
-    document.getElementById("searchOverlay").style.display = "none";
+    google.search.cse.element.getElement("searchOverlay").execute(query);
   }
 
   function closeSearchOverlay() {
     document.getElementById("searchOverlay").style.display = "none";
   }
 
+  function showTooltip() {
+    document.querySelector('.tooltip').style.opacity = '1';
+    document.querySelector('.tooltip').style.visibility = 'visible';
+  }
+
+  function hideTooltip() {
+    document.querySelector('.tooltip').style.opacity = '0';
+    document.querySelector('.tooltip').style.visibility = 'hidden';
+  }
+
   function goBack() {
     window.history.back();
   }
 
-  function showTooltip() {
-    var tooltip = document.querySelector('.tooltip');
-    tooltip.style.opacity = '1';
-    tooltip.style.visibility = 'visible';
-    tooltip.style.transform = 'translateY(-10px)';
-  }
-
-  function hideTooltip() {
-    var tooltip = document.querySelector('.tooltip');
-    tooltip.style.opacity = '0';
-    tooltip.style.visibility = 'hidden';
-    tooltip.style.transform = 'translateY(0)';
-  }
-
-  // Generate random color for each search result block
   function setRandomColors() {
-    var searchResults = document.querySelectorAll('.gsc-webResult.gsc-result');
-    searchResults.forEach(function(result) {
+    var results = document.querySelectorAll('.gsc-webResult');
+    results.forEach(function(result) {
       var randomColor = getRandomOffWhiteColor();
       result.style.backgroundColor = randomColor;
     });
@@ -249,8 +282,8 @@
     return colors[Math.floor(Math.random() * colors.length)];
   }
 
+  // Initialize animation and random colors
   window.onload = function() {
-    setRandomColors();
     setTimeout(function() {
       document.querySelector('.input-container').classList.add('show');
       document.querySelector('.search-heading').classList.add('show');
@@ -259,12 +292,13 @@
       document.querySelector('.shortcut-button').style.opacity = '1';
       document.querySelector('.shortcut-button').style.transform = 'scale(1)';
     }, 500);
-  }
 
-  document.addEventListener('keydown', function(event) {
-    if (event.ctrlKey && event.key === 'b') {
-      goBack();
-    }
+    setRandomColors();
+  };
+
+  // Monitor search results and set random colors when new results are loaded
+  document.addEventListener('DOMNodeInserted', function() {
+    setRandomColors();
   });
 </script>
 </body>
