--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(image_1.jpg);
+    background-image: url(General-1722617471316.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
